--- a/4_resistors.ipynb
+++ b/4_resistors.ipynb
@@ -1761,7 +1761,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x21a8e9f58d0>]"
+       "[<matplotlib.lines.Line2D at 0x19d843bf8e0>]"
       ]
      },
      "execution_count": 18,
@@ -2865,23 +2865,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>-49</td>\n",
+       "      <td>403.551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>-48</td>\n",
        "      <td>405.532</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-46</td>\n",
-       "      <td>409.494</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-44</td>\n",
-       "      <td>413.456</td>\n",
+       "      <td>-47</td>\n",
+       "      <td>407.513</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-42</td>\n",
-       "      <td>417.418</td>\n",
+       "      <td>-46</td>\n",
+       "      <td>409.494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2889,50 +2889,50 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>92</td>\n",
-       "      <td>677.308</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>94</td>\n",
-       "      <td>681.106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73</th>\n",
+       "      <th>146</th>\n",
        "      <td>96</td>\n",
        "      <td>684.904</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>74</th>\n",
+       "      <th>147</th>\n",
+       "      <td>97</td>\n",
+       "      <td>686.803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
        "      <td>98</td>\n",
        "      <td>688.702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75</th>\n",
+       "      <th>149</th>\n",
+       "      <td>99</td>\n",
+       "      <td>690.601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
        "      <td>100</td>\n",
        "      <td>692.500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>76 rows × 2 columns</p>\n",
+       "<p>151 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      T        R\n",
-       "0   -50  401.570\n",
-       "1   -48  405.532\n",
-       "2   -46  409.494\n",
-       "3   -44  413.456\n",
-       "4   -42  417.418\n",
-       "..  ...      ...\n",
-       "71   92  677.308\n",
-       "72   94  681.106\n",
-       "73   96  684.904\n",
-       "74   98  688.702\n",
-       "75  100  692.500\n",
+       "       T        R\n",
+       "0    -50  401.570\n",
+       "1    -49  403.551\n",
+       "2    -48  405.532\n",
+       "3    -47  407.513\n",
+       "4    -46  409.494\n",
+       "..   ...      ...\n",
+       "146   96  684.904\n",
+       "147   97  686.803\n",
+       "148   98  688.702\n",
+       "149   99  690.601\n",
+       "150  100  692.500\n",
        "\n",
-       "[76 rows x 2 columns]"
+       "[151 rows x 2 columns]"
       ]
      },
      "execution_count": 22,
@@ -2974,80 +2974,155 @@
      "data": {
       "text/plain": [
        "{401.57: 401.56880271360467,\n",
+       " 403.551: 402.66849127608623,\n",
        " 405.532: 405.5326398852224,\n",
+       " 407.513: 408.3991690074906,\n",
        " 409.494: 409.49126886626885,\n",
+       " 411.475: 411.9916463871209,\n",
        " 413.456: 413.4561727335165,\n",
+       " 415.437: 415.58143478667665,\n",
        " 417.418: 417.15066621113766,\n",
+       " 419.399: 419.3987809383081,\n",
        " 421.38: 420.76502732240436,\n",
+       " 423.354: 423.3538047412233,\n",
        " 425.328: 424.37692045066575,\n",
+       " 427.302: 427.3041193685704,\n",
        " 429.276: 429.91375887518683,\n",
+       " 431.25: 431.25,\n",
        " 433.224: 433.4901475532312,\n",
+       " 435.198: 435.1978171896317,\n",
        " 437.172: 437.1750835499443,\n",
+       " 439.146: 438.799863620866,\n",
        " 441.12: 441.1230646630237,\n",
+       " 443.088: 442.3994546693933,\n",
        " 445.056: 445.05254919499106,\n",
+       " 447.024: 447.7690227527042,\n",
        " 448.992: 448.9923603793467,\n",
+       " 450.96: 451.332086595824,\n",
        " 452.928: 452.92827268023456,\n",
+       " 454.896: 454.8924944092434,\n",
        " 456.864: 456.77331518039483,\n",
+       " 458.832: 458.82918344928595,\n",
        " 460.8: 460.3606668935012,\n",
+       " 462.763: 462.76200971572507,\n",
        " 464.726: 463.94557823129253,\n",
+       " 466.689: 466.6911699681641,\n",
        " 468.652: 469.107624674358,\n",
+       " 470.615: 470.61684782608694,\n",
        " 472.578: 472.65479678199404,\n",
+       " 474.541: 474.5392148477591,\n",
        " 476.504: 476.50513950073423,\n",
+       " 478.467: 478.2608695652174,\n",
        " 480.43: 480.4306608884074,\n",
+       " 482.387: 481.83361629881153,\n",
        " 484.344: 484.34444987557765,\n",
+       " 486.301: 486.8171317793462,\n",
        " 488.258: 488.2552721386069,\n",
+       " 490.215: 490.3511418492388,\n",
        " 492.172: 492.17134734665746,\n",
+       " 494.129: 494.12769990808823,\n",
        " 496.086: 496.08447149643706,\n",
+       " 498.043: 498.0426321506155,\n",
        " 500.0: 499.66101694915255,\n",
+       " 501.951: 501.9545180991441,\n",
        " 503.902: 504.4609751575825,\n",
+       " 505.853: 505.85456942003515,\n",
        " 507.804: 507.98189631208305,\n",
+       " 509.755: 509.75208983021486,\n",
        " 511.706: 511.70294685546156,\n",
+       " 513.657: 513.6558657786885,\n",
        " 515.608: 515.6037549854967,\n",
+       " 517.559: 517.4280879864637,\n",
        " 519.51: 519.5117047891351,\n",
+       " 521.455: 520.9742895805142,\n",
        " 523.4: 523.3975559767277,\n",
+       " 525.345: 525.5474241583426,\n",
        " 527.29: 527.2907608695652,\n",
+       " 529.235: 529.2372978684307,\n",
        " 531.18: 531.1816339224433,\n",
+       " 533.125: 533.120239390642,\n",
        " 535.07: 535.0702675245514,\n",
+       " 537.015: 537.0115090372226,\n",
        " 538.96: 538.6693684566025,\n",
+       " 540.9: 540.9004106322855,\n",
        " 542.84: 543.0480866875923,\n",
+       " 544.78: 544.7767701430066,\n",
        " 546.72: 546.7143906020558,\n",
+       " 548.66: 548.6613292011019,\n",
        " 550.6: 550.5986090974991,\n",
+       " 552.54: 552.5437776266576,\n",
        " 554.48: 554.480583392985,\n",
+       " 556.42: 556.3047875927175,\n",
        " 558.36: 558.3603967833157,\n",
+       " 560.294: 560.484242535938,\n",
        " 562.228: 562.2271219001047,\n",
+       " 564.162: 564.1612293956044,\n",
        " 566.096: 566.0920780117362,\n",
+       " 568.03: 568.0335007238509,\n",
        " 569.964: 569.9661067530695,\n",
+       " 571.898: 571.903779953505,\n",
        " 573.832: 573.8275981962239,\n",
+       " 575.766: 575.7602545968882,\n",
        " 577.7: 577.856247700515,\n",
+       " 579.628: 579.6268787137365,\n",
        " 581.556: 581.5588463646328,\n",
+       " 583.484: 583.4800596266851,\n",
        " 585.412: 585.4167607478323,\n",
+       " 587.34: 587.3432693950786,\n",
        " 589.268: 589.2729546266523,\n",
+       " 591.196: 591.1933739012846,\n",
        " 593.124: 593.127484540636,\n",
+       " 595.052: 595.1644555637165,\n",
        " 596.98: 596.9804045788186,\n",
+       " 598.902: 598.896171191691,\n",
        " 600.824: 600.8193531649948,\n",
+       " 602.746: 602.7509913482336,\n",
        " 604.668: 604.6693189596167,\n",
+       " 606.59: 606.5905948983233,\n",
        " 608.512: 608.5178208601423,\n",
+       " 610.434: 610.4288047316384,\n",
        " 612.356: 612.3407109322602,\n",
+       " 614.278: 614.2789679419986,\n",
        " 616.2: 616.202778786778,\n",
+       " 618.116: 618.1144067796611,\n",
        " 620.032: 620.0388798993168,\n",
+       " 621.948: 621.9485766267123,\n",
        " 623.864: 623.859285968661,\n",
+       " 625.78: 625.781514920312,\n",
        " 627.696: 627.6927781205924,\n",
+       " 629.612: 629.6132576393553,\n",
        " 631.528: 631.5249650837989,\n",
+       " 633.444: 633.4378395508874,\n",
        " 635.36: 635.3558847683264,\n",
+       " 637.486: 637.4799250535332,\n",
        " 639.612: 639.6110428668248,\n",
+       " 641.528: 641.5301402074543,\n",
        " 643.444: 643.4498217281879,\n",
+       " 645.36: 645.3544061302682,\n",
        " 647.276: 647.2739361702128,\n",
+       " 649.192: 649.1920705415661,\n",
        " 651.108: 651.1104910714286,\n",
+       " 652.784: 652.7813573883161,\n",
        " 654.46: 654.4547456187411,\n",
+       " 656.365: 656.3703568983225,\n",
        " 658.27: 658.2764883061658,\n",
+       " 660.175: 660.1787835086528,\n",
        " 662.08: 662.0812478047067,\n",
+       " 663.985: 663.9862933064245,\n",
        " 665.89: 665.8850539693593,\n",
+       " 667.795: 667.7874887589928,\n",
        " 669.7: 669.7035131987577,\n",
+       " 671.605: 671.6020499108735,\n",
        " 673.51: 673.5053882996921,\n",
+       " 675.409: 675.4154704063604,\n",
        " 677.308: 677.306383565129,\n",
+       " 679.207: 679.2111948142957,\n",
        " 681.106: 681.1065211907164,\n",
+       " 683.005: 683.0060480368311,\n",
        " 684.904: 684.9058226317545,\n",
+       " 686.803: 686.8000516884907,\n",
        " 688.702: 688.6951958955224,\n",
+       " 690.601: 690.5932266746412,\n",
        " 692.5: 692.4991190979563}"
       ]
      },
@@ -3062,8 +3137,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "df2ec6df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = []\n",
+    "for v1 in values:\n",
+    "    for v2 in values:\n",
+    "        for v3 in values:\n",
+    "            v = v1 + v2 * v3\n",
+    "            test.append(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a6dc4b06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16777216"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7eda5d3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3071,9 +3182,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3085,7 +3196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
