--- a/notebooks/Исследование mc7425.ipynb
+++ b/notebooks/Исследование mc7425.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "8807ef78",
    "metadata": {},
    "outputs": [],
@@ -17,13 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "ec104e74",
    "metadata": {},
    "outputs": [],
    "source": [
+    "reference_voltage = 5\n",
     "max_output_current = 25e-3\n",
-    "max_voltage = 5\n",
     "steps = 2**12"
    ]
   },
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "step = max_voltage / steps"
+    "step = reference_voltage / steps"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "outputs": [],
    "source": [
     "codes = [i for i in range(steps)]\n",
-    "voltages = [(code / steps) * max_voltage + step for code in codes]\n",
+    "voltages = [(code / steps) * reference_voltage + step for code in codes]\n",
     "df_mcp_4725 = pd.DataFrame({\"code\": codes, \"voltage\": voltages})"
    ]
   },
@@ -24720,7 +24720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "4d279baa",
    "metadata": {},
    "outputs": [
@@ -24731,7 +24731,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24742,7 +24742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "ad35fa2f",
    "metadata": {},
    "outputs": [],
@@ -24755,7 +24755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "32a0e548",
    "metadata": {},
    "outputs": [],
@@ -24765,7 +24765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "e2a0e6ce",
    "metadata": {},
    "outputs": [],
@@ -24775,7 +24775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "af23881c",
    "metadata": {},
    "outputs": [
@@ -24785,7 +24785,7 @@
        "0.03246966218432273"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24796,7 +24796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "e5b53c3c",
    "metadata": {},
    "outputs": [],
@@ -24806,7 +24806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "34659e8b",
    "metadata": {},
    "outputs": [
@@ -53517,7 +53517,7 @@
        "4095  4095  5.000000         0.162348"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53528,17 +53528,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "id": "29acea44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "divider_current = 5 / (R1 + R2)"
+    "divider_current = reference_voltage / (R1 + R2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "4aa688e2",
    "metadata": {},
    "outputs": [
@@ -53548,7 +53548,7 @@
        "True"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53559,21 +53559,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "90e5b2e3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "99.0050505050505"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
