--- a/notebooks/Исследование mc7425.ipynb
+++ b/notebooks/Исследование mc7425.ipynb
@@ -53559,8 +53559,341 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "id": "1e049ec0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def twos_comp(val, bits):\n",
+    "    \"\"\"compute the 2's complement of int value val\"\"\"\n",
+    "    if (val & (1 << (bits - 1))) != 0: # if sign bit is set e.g., 8bit: 128-255\n",
+    "        val = val - (1 << bits)        # compute negative value\n",
+    "    return val "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "90e5b2e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_voltage = 40e-3\n",
+    "min_voltage = -1*max_voltage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f3156cf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step = ((max_voltage * 2) / 2**24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "02754bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hx_codes = [i for i in range(2**24)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2aa0952c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twos_comp_codes = [twos_comp(i, 24) for i in hx_codes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "895788d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hx_voltages = [i * step for i in twos_comp_codes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e59fa594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hex_codes = [hex(i).upper() for i in hx_codes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "75910ee7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_hx = pd.DataFrame(\n",
+    "    {\n",
+    "        \"code\": hx_codes,\n",
+    "        \"voltage\": hx_voltages,\n",
+    "        \"2's comp\": twos_comp_codes,\n",
+    "        \"hex_code\": hex_codes,\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "335e0f35",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'twos_comp_codes' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [27]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m twos_comp_codes\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m hx_codes\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m hx_voltages\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'twos_comp_codes' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "del twos_comp_codes\n",
+    "del hx_codes\n",
+    "del hx_voltages\n",
+    "del hex_codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6a142a18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>voltage</th>\n",
+       "      <th>2's comp</th>\n",
+       "      <th>hex_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0X0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.768372e-09</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0X1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>9.536743e-09</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0X2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1.430511e-08</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0X3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1.907349e-08</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0X4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16777211</th>\n",
+       "      <td>16777211</td>\n",
+       "      <td>-2.384186e-08</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>0XFFFFFB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16777212</th>\n",
+       "      <td>16777212</td>\n",
+       "      <td>-1.907349e-08</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>0XFFFFFC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16777213</th>\n",
+       "      <td>16777213</td>\n",
+       "      <td>-1.430511e-08</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>0XFFFFFD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16777214</th>\n",
+       "      <td>16777214</td>\n",
+       "      <td>-9.536743e-09</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>0XFFFFFE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16777215</th>\n",
+       "      <td>16777215</td>\n",
+       "      <td>-4.768372e-09</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0XFFFFFF</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16777216 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              code       voltage  2's comp  hex_code\n",
+       "0                0  0.000000e+00         0       0X0\n",
+       "1                1  4.768372e-09         1       0X1\n",
+       "2                2  9.536743e-09         2       0X2\n",
+       "3                3  1.430511e-08         3       0X3\n",
+       "4                4  1.907349e-08         4       0X4\n",
+       "...            ...           ...       ...       ...\n",
+       "16777211  16777211 -2.384186e-08        -5  0XFFFFFB\n",
+       "16777212  16777212 -1.907349e-08        -4  0XFFFFFC\n",
+       "16777213  16777213 -1.430511e-08        -3  0XFFFFFD\n",
+       "16777214  16777214 -9.536743e-09        -2  0XFFFFFE\n",
+       "16777215  16777215 -4.768372e-09        -1  0XFFFFFF\n",
+       "\n",
+       "[16777216 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_hx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a03e65dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>voltage</th>\n",
+       "      <th>2's comp</th>\n",
+       "      <th>hex_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [code, voltage, 2's comp, hex_code]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_hx[df_hx[\"2\\'s comp\"]  == -8396614]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "09186856",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-8396614"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-8006 ^ 0x800000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14a7d2d2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -53582,7 +53915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
