--- a/src/notebooks/Исследование mc7425.ipynb
+++ b/src/notebooks/Исследование mc7425.ipynb
@@ -53584,12 +53584,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "id": "f3156cf7",
    "metadata": {},
    "outputs": [],
    "source": [
     "step = ((max_voltage * 2) / 2**24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "3d3e5670",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.76837158203125e-09"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "step"
    ]
   },
   {
@@ -53651,22 +53672,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "335e0f35",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'twos_comp_codes' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [27]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m twos_comp_codes\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m hx_codes\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m hx_voltages\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'twos_comp_codes' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "del twos_comp_codes\n",
     "del hx_codes\n",
@@ -53818,7 +53827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "id": "a03e65dd",
    "metadata": {},
    "outputs": [
@@ -53850,50 +53859,119 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16772718</th>\n",
+       "      <td>16772718</td>\n",
+       "      <td>-0.000021</td>\n",
+       "      <td>-4498</td>\n",
+       "      <td>0XFFEE6E</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [code, voltage, 2's comp, hex_code]\n",
-       "Index: []"
+       "              code   voltage  2's comp  hex_code\n",
+       "16772718  16772718 -0.000021     -4498  0XFFEE6E"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_hx[df_hx[\"2\\'s comp\"]  == -8396614]"
+    "df_hx[df_hx[\"2\\'s comp\"]  == -4498]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "id": "09186856",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-8396614"
+       "-16786665"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "-8006 ^ 0x800000"
+    "-3914"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "14a7d2d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-220593.22033898305"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-5206 / 0.0236"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "e8efcd0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.024171211235170655"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5332 / 220593"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "4beca450",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.765625e-05"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.1 / 2**10"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14a7d2d2",
+   "id": "0a841083",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -53915,7 +53993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
