--- a/src/notebooks/обработка инструкции по RS-485.ipynb
+++ b/src/notebooks/обработка инструкции по RS-485.ipynb
@@ -31,33 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6bae344a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/home/mfitsek@wooppay.kz/PycharmProjects/dissertation/data')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "6d08169b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(data_dir / \"modbus\" / \"RS-485.xlsx\")"
+    "df = pd.read_excel(data_dir / \"RS-485\" / \"Modbus.xlsx\")"
    ]
   },
   {
@@ -3114,7 +3093,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
