--- a/data/diagrams/диаграмма классов.md
+++ b/data/diagrams/диаграмма классов.md
@@ -14,7 +14,6 @@ classDiagram
     
     class AD8400 {
         __init__(SPI spi, str cs, int baudrate)
-        -Pin cs
         -SPIDevice spidev
         send_code(int code)
     }
@@ -57,18 +56,6 @@ classDiagram
         write(bytes buf, int start, int end)
     }
     
-    class Lockable {
-        -bool locked
-        +try_lock() bool
-        +unlock()
-    }
-    
-    class ContextManaged {
-        __enter__()
-        __exit__()
-        deinit()
-    }
-    
     class SPIDevice{
         +SPI spi
         +int baudrate
@@ -101,14 +88,14 @@ classDiagram
         INPUT
         OUTPUT
     }
+    
+    class Pin {
+        int id
+    }
    
     BaseDevice <|-- AD8400
     BaseDevice <|-- MCP4725
-    ContextManaged <|-- Lockable
-    ContextManaged <|-- DigitalInOut
     DigitalInOut <-- Direction 
-    Lockable <|-- I2C
-    Lockable <|-- SPI
     AD8400 *-- SPIDevice
     SPIDevice o-- SPI
     MCP4725 *-- _MCP4725
@@ -116,8 +103,32 @@ classDiagram
     BaseRelay <|.. DigitalIORelay
     SPIDevice *-- DigitalInOut
     DigitalIORelay o-- DigitalInOut
+    I2C o-- Pin
+    SPI o-- Pin
+    DigitalInOut o-- Pin
 ```
 
+Дополнение к периферии
+```mermaid
+classDiagram
+
+    Lockable <|-- I2C
+    Lockable <|-- SPI
+    ContextManaged <|-- Lockable
+    ContextManaged <|-- DigitalInOut
+    
+    class Lockable {
+        -bool locked 
+        +try_lock() 
+        bool +unlock() 
+    }
+    
+    class ContextManaged {
+        __enter__() 
+        __exit__()
+        deinit() 
+    }
+```
 ## Управление симуляторами датчиков
 
 ```mermaid
@@ -257,6 +268,7 @@ classDiagram
         pyqtSignal~PlotPoint~ temperature_signal
         -float k
         -int direction
+        -float update_period
         -float set_temperature
         -float temperature
         -bool reset
@@ -357,7 +369,17 @@ classDiagram
         UNIFIED_ANALOG_SIGNAL
     }
 
+    class Session {
+        query()
+        commit()
+    }
+
     SensorsService o-- Session
+    SensorCharacteristics -- Sensor
+    SensorsService -- Sensor
+    Sensor -- SensorType
+    SensorCharacteristicsService -- SensorCharacteristics
+    SensorCharacteristicsService o-- Session
 ```
 
 ## Интерфейс
@@ -411,8 +433,10 @@ classDiagram
         resizeRowsToContents()
     }
     
+    class QDoubleSpinBox {
+        pyqtSignal~float~ valueChanged
+    } 
     class QMainWindow
-    class QDoubleSpinBox 
     class k_spin_box
     class temp_spin_box
     class sensor_characteristics_table
