--- a/data/diagrams/последовательность.md
+++ b/data/diagrams/последовательность.md
@@ -2,25 +2,21 @@
 sequenceDiagram
     autonumber
     participant User
-    participant Display
     participant Program
     participant Database
     participant Interface Board
     participant TRM
-    User ->> Display: Выбрать датчик
-    Display ->> Program: Сигнал о выборе датчика
+    User ->> Program: Выбрать датчик
     Program ->> Database: Найти характеристику датчика
     Database -->> Program: Вернуть характеристику датчика
-    Program -->> Display: Отобразить характеристику датчика
-    Display -->> User: Отобразить изменения
+    Program -->> User: Отобразить характеристику датчика
     Program ->> Interface Board: Переключить реле
     loop Несколько раз в секунду
         Program ->> Interface Board: Расcчитать температуру и отправить код
         Interface Board ->> TRM: Выработать сигнал
         Program ->> TRM: Опросить параметры ТРМ-а
         TRM -->> Program: Вернуть запрошенные параметры
-        Program -->> Display: Перерисовать графики и отобразить параметры
-        Display -->> User: Отобразить изменения
+        Program -->> User: Перерисовать графики и отобразить параметры
     end
 ```
 
