--- a/data/diagrams/алгоритм упрощенный.md
+++ b/data/diagrams/алгоритм упрощенный.md
@@ -19,12 +19,11 @@ flowchart
     H["Чтение параметров ТРМ"] --> I
     I["Отображение параметров ТРМ"] --> J
     J["Перерисовка графика изменения температуры"] --> K
-    K["Пользователь закрыл программу?"] -->|"Нет"| E
+    K{"Пользователь закрыл 
+    программу?"} -->|"Нет"| E
     K -->|"Да"| Z     
-        
     Z["Деинициализация модулей программы,
     деинициализация шин протоколов,
     закрытие соединения с БД"] --> End
-    
     End(["Завершение программы"])
 ```
