--- a/data/diagrams/последовательность.md
+++ b/data/diagrams/последовательность.md
@@ -1,22 +1,22 @@
 ```mermaid
 sequenceDiagram
     autonumber
-    participant User
-    participant Program
-    participant Database
-    participant Interface Board
-    participant TRM
-    User ->> Program: Выбрать датчик
-    Program ->> Database: Найти характеристику датчика
-    Database -->> Program: Вернуть характеристику датчика
-    Program -->> User: Отобразить характеристику датчика
-    Program ->> Interface Board: Переключить реле
+    participant Пользователь
+    participant Программа
+    participant БД
+    participant Плата
+    participant ТРМ
+    Пользователь ->> Программа: Выбрать датчик
+    Программа ->> БД: Найти характеристику датчика
+    БД -->> Программа: Вернуть характеристику датчика
+    Программа -->> Пользователь: Отобразить характеристику датчика
+    Программа ->> Плата: Переключить реле
     loop Несколько раз в секунду
-        Program ->> Interface Board: Расcчитать температуру и отправить код
-        Interface Board ->> TRM: Выработать сигнал
-        Program ->> TRM: Опросить параметры ТРМ-а
-        TRM -->> Program: Вернуть запрошенные параметры
-        Program -->> User: Перерисовать графики и отобразить параметры
+        Программа ->> Плата: Расcчитать температуру и отправить код
+        Плата ->> ТРМ: Выработать сигнал
+        Программа ->> ТРМ: Опросить параметры ТРМ-а
+        ТРМ -->> Программа: Вернуть запрошенные параметры
+        Программа -->> Пользователь: Перерисовать графики и отобразить параметры
     end
 ```
 
