--- a/data/diagrams/диаграмма классов.md
+++ b/data/diagrams/диаграмма классов.md
@@ -89,15 +89,31 @@ classDiagram
         int id
     }
    
+    class Lockable {
+        -bool locked 
+        +try_lock() bool
+        +unlock() 
+    }
+    
+    class ContextManaged {
+        __enter__() 
+        __exit__()
+        deinit() 
+    }
+   
+    _MCP4725 o-- I2C
+    Lockable <|-- I2C
+    Lockable <|-- SPI
+    ContextManaged <|-- Lockable
     BaseDevice <|-- AD8400
     BaseDevice <|-- MCP4725
     DigitalInOut <-- Direction 
     AD8400 *-- SPIDevice
     SPIDevice o-- SPI
-    MCP4725 *-- _MCP4725
-    _MCP4725 o-- I2C
-    BaseRelay <|.. DigitalIORelay
     SPIDevice *-- DigitalInOut
+    ContextManaged <|-- DigitalInOut
+    MCP4725 *-- _MCP4725
+    BaseRelay <|.. DigitalIORelay
     DigitalIORelay o-- DigitalInOut
     I2C o-- Pin
     SPI o-- Pin
@@ -105,6 +121,7 @@ classDiagram
 ```
 
 Дополнение к периферии
+
 ```mermaid
 classDiagram
 
@@ -125,6 +142,7 @@ classDiagram
         deinit() 
     }
 ```
+
 ## Управление симуляторами датчиков
 
 ```mermaid
@@ -186,13 +204,13 @@ classDiagram
     BaseSensorManager <|.. ResistanceThermometerManager
     BaseSensorManager <|.. ThermocoupleManager
     ResistanceThermometerManager o-- BaseRelay
-    ResistanceThermometerManager o-- AD8400
     ResistanceThermometerManager *-- DataFrame
+    ThermocoupleManager *-- DataFrame
     ThermocoupleManager o-- MCP4725
     ThermocoupleManager o-- BaseRelay
-    ThermocoupleManager *-- DataFrame
     UnifiedAnalogSignalManager o-- MCP4725
     UnifiedAnalogSignalManager o-- BaseRelay
+    ResistanceThermometerManager o-- AD8400
 ```
 
 ## Протокол Овен
@@ -230,7 +248,7 @@ classDiagram
     }
     
     class TRMParametersReadThread {
-        pyqtSignal~dict~ parameter_signal
+        pyqtSignal~list~ parameters_signal
         OwenClient client
         float update_period
         run()
@@ -253,32 +271,41 @@ classDiagram
 ```mermaid
 classDiagram
     
+    class Solver {
+        <<abstract>>
+        float k
+        float start_temperature
+        float temperature
+        float set_temperature
+        float interference_amplitude
+        float interference_frequency
+        float direction
+        bool sinusoidal_interference_enabled
+        bool burst_interference_enabled
+        set_sinusoidal_interference_enabled(bool value)
+        set_burst_interference_enabled(bool value)
+        set_set_temperature(float temperature)
+        set_interference_amplitude(float amplitude)
+        set_interference_frequency(float frequency)
+        calculate_temperature(float time) float
+        calculate_burst_interference(float time) float
+        calculate_sinusoidal_interference(float time) float
+    }
+    
+    class LinearSolver {
+        calculate_temperature(float time) float
+    }
+    
     class TemperatureCalculationThread {
-        pyqtSignal~PlotPoint~ temperature_signal
-        -float k
-        -int direction
-        -float update_period
-        -float set_temperature
-        -float temperature
-        -bool reset
-        -bool enable_bursts 
+        pyqtSignal~float~ temperature_signal
+        Solver solver
+        float update_period
+        float
+        bool reset
         run()
-        calculate_temperature()
         set_k_ratio(float k)
+        now()
         set_temperature(float new_set_temperature)
-        set_enable_bursts(int new_val)
-    }
-    
-    class PlotPoint{
-        float time
-        float value
-    }
-    
-    class PlotManager {
-        -PlotWidget graph
-        -deque~float~ time_axis
-        -deque~float~ values_axis
-        update_graph(point PlotPoint)
     }
     
     class CurveManager {
@@ -288,7 +315,7 @@ classDiagram
         update(float time, float value)
     }
     
-    class TRMInfoPlotManager {
+    class TemperaturePlotManager {
         -PlotWidget plot_widget
         -int max_points
         -float start_time
@@ -310,10 +337,11 @@ classDiagram
     }
     
     QThread <|-- TemperatureCalculationThread
-    TRMInfoPlotManager *-- CurveManager
-    TRMInfoPlotManager o-- PlotWidget
-    PlotManager o-- PlotWidget
+    TemperatureCalculationThread o-- Solver
+    TemperaturePlotManager *-- CurveManager
+    TemperaturePlotManager o-- PlotWidget
     CurveManager o-- PlotDataItem
+    Solver <|-- LinearSolver
 ```
 
 ## Взаимодействие с БД
@@ -387,6 +415,10 @@ classDiagram
         display_characteristics(Sensor sensor)
     }
     
+    class TRMParametersInfoTable {
+        update_info(list~dict~ parameters)
+    }
+    
     class SensorInfoTable{
         update_info(Sensor sensor)
     }
@@ -425,33 +457,34 @@ classDiagram
         pyqtSignal~float~ valueChanged
     } 
     class QMainWindow
-    class k_spin_box
-    class temp_spin_box
-    class sensor_characteristics_table
-    class sensor_info_table
-    class uas_max_temp
-    class uas_min_temp
     
-    QComboBox <|-- SensorsComboBox
-    SensorsComboBox o-- Sensor
-    QTableWidget <|-- CharacteristicsTableWidget
-    QTableWidget <|-- SensorInfoTable
-    CharacteristicsTableWidget *-- SensorCharacteristicsService
-    QAbstractSpinBox <|-- QDoubleSpinBox
-    QAbstractSpinBox <|-- QSpinBox
-    QDoubleSpinBox -- k_spin_box
-    QSpinBox -- temp_spin_box
-    CharacteristicsTableWidget -- sensor_characteristics_table
-    SensorInfoTable -- sensor_info_table
-    QSpinBox -- uas_max_temp
-    QSpinBox -- uas_min_temp
+    class QCheckBox {
+        pyqtSignal~int~ stateChanged
+    }
+    
+    class QComboBox {
+        pyqtSignal~str~ currentTextChanged
+        addItems(Iterable~str~)
+        setCurrentText(~str~)
+    }
+    
+    QObject <|-- QThread
     QObject <|-- QApplication 
+    QObject <|-- QWidget
+    QPaintDevice <|-- QWidget
     QWidget <|-- QAbstractSpinBox
+    QWidget <|-- QCheckBox
     QWidget <|-- QTableWidget
     QWidget <|-- QComboBox
     QWidget <|-- QMainWindow
     QWidget <|-- PlotWidget
-    QObject <|-- QWidget
-    QPaintDevice <|-- QWidget
-    QObject <|-- QThread
+    QComboBox <|-- SensorsComboBox
+    SensorsComboBox o-- Sensor
+    QTableWidget <|-- CharacteristicsTableWidget
+    QTableWidget <|-- SensorInfoTable
+    QTableWidget <|-- TRMParametersInfoTable
+    CharacteristicsTableWidget *-- SensorCharacteristicsService
+    QAbstractSpinBox <|-- QDoubleSpinBox
+    QAbstractSpinBox <|-- QSpinBox
+
 ```
